--- a/packages/repo/package.json
+++ b/packages/repo/package.json
@@ -24,9 +24,9 @@
     "build": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
-    "@atproto/common": "workspace:^",
     "@atproto/common-web": "workspace:^",
     "@atproto/crypto": "workspace:^",
+    "@atproto/lex-cbor": "workspace:^",
     "@atproto/lexicon": "workspace:^",
     "@ipld/dag-cbor": "^7.0.0",
     "multiformats": "^9.9.0",
