fix(repo): use optional peer dependency for pino logging
Add @atproto/common as optional peer dependency. If installed (Node.js
environments), uses pino logger for backwards-compatible logging.
Otherwise falls back to no-op for web platform compatibility.

This ensures:
- Existing Node.js users with @atproto/common get same logging behavior
- Web platform users get silent logging (no runtime errors)

--- a/packages/repo/package.json
+++ b/packages/repo/package.json
@@ -37,5 +37,13 @@
   "devDependencies": {
     "jest": "^28.1.2",
     "typescript": "^5.6.3"
+  },
+  "peerDependencies": {
+    "@atproto/common": "workspace:^"
+  },
+  "peerDependenciesMeta": {
+    "@atproto/common": {
+      "optional": true
+    }
   }
 }
